res bar z-index fix

--- a/version1/main.css
+++ b/version1/main.css
@@ -130,6 +130,7 @@ img {
   top:0px;
   background:#ececec;
   box-shadow:0 2px 10px rgba(0,0,0,.12);
+  z-index:1;
 }
 
 .query_size{
